# git-scrub

./: README.md  pyproject.toml
.github/workflows/: ci.yml
git_scrub/: cli.py  github.py  rewriter.py
tests/: test_cli.py
